# pyrobopath

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  test.yml
collision_detection/: __init__.py  collision_model.py  trajectory.py  trajectory_collision_detection.py  utilities.py
docs/: Makefile  api.rst  conf.py  demos.rst  doc-requirements.txt  gallary.rst  index.rst
docs/_static/css/: custom.css
docs/api/: modules.rst  pyrobopath.collision_detection.rst  pyrobopath.rst  pyrobopath.scheduling.rst  pyrobopath.toolpath.rst  pyrobopath.toolpath_scheduling.rst  pyrobopath_ros.rst
docs/users/: development.rst  examples.rst  index.rst  installation.rst
docs/users/examples/: index.rst  python_examples.rst  ros_examples.rst
examples/: example_toolpath.py  examples.py  planners_examples.py  robot_number_examples.py  simple_scheduling_example.py  toolpath_examples.py  utilities.py
scheduling/: __init__.py  dependency_graph.py  schedule.py  visualization.py
src/pyrobopath/: __init__.py
src/pyrobopath/collision_detection/: __init__.py  collision_model.py  fcl_collision_models.py  simple_collision_models.py  trajectory.py  trajectory_collision_detection.py
src/pyrobopath/process/: __init__.py  agent_model.py  dependency_graph.py  utilities.py
src/pyrobopath/scheduling/: __init__.py  dependency_graph.py  schedule.py  visualization.py
src/pyrobopath/toolpath/: __init__.py  preprocessing.py  toolpath.py  toolpath_core.py  visualization.py
src/pyrobopath/toolpath/path/: __init__.py  path.py  smoothing.py  spline.py  transform.py  visualization.py
src/pyrobopath/toolpath/visualization/: __init__.py  colors.py  matplotlib_backend.py  pyqtgraph_backend.py  visualizer.py
src/pyrobopath/toolpath_scheduling/: __init__.py  batched_planners.py  depth_based_planners.py  parallel_scheduler.py  schedule.py  schedule_toolpath.py  system_model.py  toolpath_collision.py  toolpath_dg.py  toolpath_scheduler.py  visualization.py
src/pyrobopath/tools/: __init__.py  _types_35.py  _types_39.py  geometry.py  linalg.py  types.py  utils.py
src/pyrobopath_ros/: __init__.py  agent_execution_context.py  schedule_execution.py
test/: test_collision_detection.py  test_scheduling.py  test_toolpath.py  test_toolpath_scheduling.py  test_tools.py
test/test_gcode/: hollow_square.gcode  multi_tool_demo.gcode
toolpath/: __init__.py  toolpath.py  visualization.py
toolpath_scheduling/: __init__.py  visualization.py
