[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobopath"
dynamic = ["version"]
authors = [
  { name="Alex Arbogast", email="arbogastaw@gmail.com"},
]
description = "This project contains python and ROS packages for working with robotic toolpaths"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "matplotlib",
  "networkx",
  "gcodeparser",
  "python-fcl",
  "numpy>=1.21",
  "numpy-quaternion",
  "scipy",
  "colorama",
  "PyQt5",
  "pyqtgraph",
  "PyOpenGL",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

docs = [
  "sphinx>=3.1",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
]

[project.urls]
homepage = "https://github.com/alexarbogast/pyrobopath"
documentation = "https://pyrobopath.readthedocs.io/en/latest/"
issues = "https://github.com/alexarbogast/pyrobopath/issues"

[tools.setuptools]

packages = [
  "pyrobopath",
  "pyrobopath.collision_detection",
  "pyrobopath.scheduling",
  "pyrobopath.toolpath",
  "pyrobopath.toolpath.path",
  "pyrobopath.toolpath.visualization",
  "pyrobopath.toolpath_scheduling",
  "pyrobopath.tools",
]

[tool.setuptools_scm]
